--- a/vignettes/prm-table-example4.Rmd
+++ b/vignettes/prm-table-example4.Rmd
@@ -1,22 +1,15 @@
 ---
-title: "Working examples of parameter tables"
-subtitle: "Parameter table for final model"
-
-output:
-  html_document:
-  toc : yes
-toc_float: yes
-df_print: paged
-theme: lumen
-number_sections: yes
+title: "Example 4"
+output: rmarkdown::html_vignette
 css: css/pmxpartab_defaults.css
-
-knitr: (function(inputFile, encoding) {
-  rmarkdown::render(inputFile, encoding = encoding,
-                    output_format = "html_document") })
+vignette: >
+  %\VignetteIndexEntry{Example 4}
+  %\VignetteEngine{knitr::rmarkdown}
+  \usepackage[utf8]{inputenc}
 ---
 
-Example with all information coded in the NONMEM run and bootstrap information available
+
+Example with all information in the yaml file (except from parameter name) and pre-filtered bootstrap results passed by user.
   
 ```{r setup, include=FALSE}
 
@@ -30,26 +23,28 @@ knitr::opts_chunk$set(echo = TRUE)
 # ----- Load package -----
 library(pmxpartabc)
 
-# Specify run directories
+# ----- Define directory and file names -----
 run_dir    <- file.path(system.file(package = "pmxpartabc"), "examples")
-run_dir.boot <- file.path(run_dir, 'bootstrap_dir2')
 run_prefix <- "run"
-runno     <-  "5"
-runno.boot <- "5boot"
+runno     <-  "6"
+boot.object <-  read.csv(file.path(run_dir, "bootstrap_dir2", "raw_results_run5boot.csv"), header = TRUE, check.names = FALSE)
+yaml.file.name <- file.path(system.file(package = "pmxpartabc"), "meta.yaml")
 
 ```
 
-# Parameter table 1 - using model output directly
+# Parameter table 1 - using yaml file
 ```{r all-runs-1, results='asis', warning = FALSE}
 
 output <- parframe2setup(run_dir, 
                          run_prefix, 
                          runno, 
                          bootstrap = TRUE, 
-                         run_dir.boot, 
-                         runno.boot, 
                          conf.level = 0.95, 
-                         min_suc = TRUE)
+                         min_suc = TRUE, 
+                         read.boot = TRUE, 
+                         boot.obj = boot.object, 
+                         yaml.file = TRUE, 
+                         yaml.file.name = yaml.file.name)
 
 tab <- parframe(out=output[[1]], meta=output[[2]], bootstrap=TRUE)  
 
